[package]
name = "solana_block_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.16.10"
solana-sdk = "1.16.10"
solana-transaction-status = "1.16.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bellman = "0.14.0"
ff = "0.9.0"
rand = "0.8.0"
